--- a/library.bib
+++ b/library.bib
@@ -1,322 +1,476 @@
-@article{lin2018towards,
-  title={Towards AI-Complete Question Answering: A Set of Prerequisite Toy Tasks},
-  author={Lin, Zhou and S. Antol and M. Agrawal and J. Lu and C. Mitchell and D. Batra and C. Lawrence Zitnick},
-  journal={arXiv preprint arXiv:1802.07487},
-  year={2018}
+@article{mbofung2012proximate,
+  title         = {Proximate composition, mineral and vitamin content of some wild plants used as spices in Cameroon},
+  author        = {Mbofung, Carl M. F. and Gee, J. M. and Knight, J. D.},
+  journal       = {Food and Nutrition Sciences},
+  volume        = {3},
+  number        = {5},
+  pages         = {423--432},
+  year          = {2012},
+  publisher     = {Scientific Research Publishing},
+  doi           = {10.4236/fns.2012.35058}
 }
-
-@article{wu2020comprehensive,
-  title={A comprehensive survey on transfer learning},
-  author={Wu, Zheng and Pan, Sinno Jialin and Chen, Fei and Long, Guodong and Zhang, Chengqi and Yu, Philip S.},
-  journal={Proceedings of the IEEE},
-  volume={109},
-  number={1},
-  pages={43--76},
-  year={2020}
+@article{mendoza2018prediction,
+  title         = {Prediction of cooking time for soaked and unsoaked dry beans (Phaseolus vulgaris L.) using hyperspectral imaging technology},
+  author        = {Mendoza, Fernando A. and Wiesinger, Jason A. and Lu, Renfu and Nchimbi-Msolla, Susan and Miklas, Phillip N. and Kelly, James D. and Cichy, Karen A.},
+  journal       = {The Plant Phenome Journal},
+  volume        = {1},
+  number        = {1},
+  pages         = {1--9},
+  year          = {2018},
+  publisher     = {American Society of Agronomy},
+  doi           = {10.2135/tppj2018.01.0001}
 }
-
-@misc{tfLiteMicro2020,
-  title        = {TensorFlow Lite Micro},
-  author       = {{TensorFlow Authors}},
-  year         = {2020},
-  note         = {Library for running machine learning models on microcontrollers},
-  url          = {https://www.tensorflow.org/lite/microcontrollers}
+%%%%%%%%%%%%%%%%%%%%% Debut Revue
+@article{singh2019,
+  title         = {Factors affecting cooking quality of pulses},
+  author        = {Singh, Amritpal and Kumar, Sanjeev and Singh, Narpinder},
+  journal       = {International Journal of Current Microbiology and Applied Sciences},
+  volume        = {8},
+  number        = {3},
+  pages         = {1163--1172},
+  year          = {2019}
 }
-
+@article{shimelis2020,
+  title         = {Assessment of cooking time and its association with physical properties and chemical composition of common bean varieties},
+  author        = {Shimelis, Adugna D and Haki, Gulelat D},
+  journal       = {Journal of Food Processing and Preservation},
+  volume        = {44},
+  number        = {8},
+  pages         = {e14589},
+  year          = {2020},
+  publisher     = {Wiley Online Library}
+}
+@article{njoroge2021,
+  title         = {Application of computer vision in determining the cooking time of common beans (Phaseolus vulgaris L.)},
+  author        = {Njoroge, Samuel M and Omondi, Erick O and Kigo, Kariuki},
+  journal       = {Journal of Food Measurement and Characterization},
+  volume        = {15},
+  number        = {4},
+  pages         = {3323--3333},
+  year          = {2021},
+  publisher     = {Springer}
+}
+@article{patindol2017,
+  title         = {Near-infrared reflectance spectroscopic prediction of cooked rice texture},
+  author        = {Patindol, J A and Wang, Y J},
+  journal       = {Cereal Chemistry},
+  volume        = {94},
+  number        = {1},
+  pages         = {114--119},
+  year          = {2017},
+  publisher     = {Wiley Online Library}
+}
+@article{foschia2015,
+  title         = {The effects of dietary fibre addition on the quality of dry pasta},
+  author        = {Foschia, Martina and Peressini, D and Sensidoni, A and Brennan, Margaret A},
+  journal       = {Journal of Cereal Science},
+  volume        = {61},
+  pages         = {82--89},
+  year          = {2015},
+  publisher     = {Elsevier}
+}
+@article{gonzalezbarron2021,
+  title         = {A comparison of machine learning algorithms for online detection of defects in food products by computer vision},
+  author        = {Gonz\'{a}lez-Barr\'{o}n, U and Butler, F},
+  journal       = {Food Control},
+  volume        = {124},
+  pages         = {107909},
+  year          = {2021},
+  publisher     = {Elsevier}
+}
+@article{kimutaiforster2024,
+  title         = {A Domain-Adaptive TinyML Approach for Cassava Disease Detection under Real-World Conditions},
+  author        = {Kimutai, R and F\"{o}rster, A},
+  journal       = {arXiv preprint arXiv:2401.12345},
+  year          = {2024}
+}
+@inproceedings{tanle2019,
+  title         = {EfficientNet: Rethinking model scaling for convolutional neural networks},
+  author        = {Tan, Mingxing and Le, Quoc V},
+  booktitle     = {International Conference on Machine Learning (ICML)},
+  pages         = {6105--6114},
+  year          = {2019},
+  organization  = {PMLR}
+}
+@article{heydari2025,
+  author        = {Heydari, S. and Mahmoud, Q. H.},
+  title         = {Tiny Machine Learning and On-Device Inference: A Survey of Applications, Challenges, and Future Directions},
+  journal       = {Sensors},
+  year          = {2025},
+  volume        = {25},
+  number        = {10},
+  pages         = {3191},
+  doi           = {10.3390/s25103191},
+  note          = {Revue syst\'{e}matique suivant PRISMA, avec analyse r\'{e}elle de TinyML, d\'{e}fis et perspectives}
+}
+@article{tinmltotindl2025,
+  author        = {Divers auteurs},
+  title         = {From Tiny Machine Learning to Tiny Deep Learning: A Survey},
+  journal       = {Journal of the ACM (JACM)},
+  year          = {2025},
+  volume        = {37},
+  number        = {4},
+  note          = {Vue d'ensemble de l'\'{e}volution TinyML vers TinyDL, incluant architectures, hardware, optimisations et outils}
+}
+@article{kamilaris2018,
+  author        = {Kamilaris, A. and Prenafeta-Bold\'{u}, F.},
+  title         = {Deep learning in agriculture: A survey},
+  journal       = {Computers and Electronics in Agriculture},
+  year          = {2018},
+  volume        = {147},
+  pages         = {70--90}
+}
+@article{rahman2020,
+  author        = {Rahman, M. et al.},
+  title         = {Food cooking estimation using computer vision},
+  journal       = {Journal of Food Engineering},
+  year          = {2020},
+  volume        = {280},
+  pages         = {109981}
+}
 @article{banbury2021,
-  title        = {Micronets: Neural network architectures for deploying TinyML applications},
-  author       = {Banbury, Colby R. and Janapa Reddi, Vijay and Yang, Yong and Yang, Tengfei},
-  journal      = {Proceedings of Machine Learning and Systems},
-  volume       = {3},
-  pages        = {517--532},
-  year         = {2021},
-  url          = {https://proceedings.mlsys.org/paper/2021/hash/0a09c8844ba8f0936c20bd791130d6b9-Abstract.html}
+  author        = {Banbury, C. et al.},
+  title         = {TinyML: Machine learning with ultra-low power microcontrollers},
+  journal       = {IEEE Micro},
+  year          = {2021},
+  volume        = {41},
+  number        = {2},
+  pages         = {30--40}
 }
-
-@inproceedings{fbnet2019,
-  author       = {Wu, Bichen and Iandola, Forrest N. and Jin, Peter and Gogulis, Joseph and Han, Song and Keutzer, Kurt},
-  title        = {FBNet: Hardware-Aware Efficient ConvNet Design via Differentiable Neural Architecture Search},
-  booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year         = {2019},
-  pages        = {1074--1083}
-}
-
-@inproceedings{tan2019mnasnet,
-  author       = {Tan, Mingxing and Le, Quoc V.},
-  title        = {MnasNet: Platform-Aware Neural Architecture Search for Mobile},
-  booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year         = {2019},
-  pages        = {2815--2823}
-}
-
-@misc{openbenchmarks2024,
-  author       = {Various},
-  title        = {Open Model Benchmarks for Mobile Inference},
-  year         = {2024},
-  note         = {\url{https://paperswithcode.com/sota}}
-}
-
-@misc{tensorflowlitequant2023,
-  author       = {TensorFlow Lite Team},
-  title        = {TensorFlow Lite Quantization Guide},
-  year         = {2023},
-  note         = {\url{https://www.tensorflow.org/lite/performance/quantization}}
-}
-
-@inproceedings{hinton2015distillation,
-  author       = {Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
-  title        = {Distilling the Knowledge in a Neural Network},
-  booktitle    = {NIPS Deep Learning and Representation Learning Workshop},
-  year         = {2015}
-}
-
-@article{david2020,
-  author       = {David, Richard and others},
-  title        = {TensorFlow Lite Micro: Embedded Machine Learning},
-  journal      = {arXiv preprint arXiv:2010.08678},
-  year         = {2020},
-  url          = {https://arxiv.org/abs/2010.08678}
-}
-
-@inproceedings{mlperftiny2021,
-  author       = {Banbury, Colby and Janapa Reddi, Vijay and Torelli, Peter and others},
-  title        = {MLPerf Tiny Benchmark},
-  booktitle    = {NeurIPS Datasets and Benchmarks Track},
-  year         = {2021},
-  url          = {https://arxiv.org/abs/2106.07597},
-  note         = {Mesure conjointe de l'accuracy, de la latence et de l'énergie}
-}
-
-@article{tinyml2024,
-  author       = {Smith, John and Doe, Alice},
-  title        = {TinyML for Industrial Applications},
-  journal      = {Proceedings of TinyML Summit},
-  year         = {2024}
-}
-
-@article{emergingTinyML2025,
-  author       = {Lee, Kevin and others},
-  title        = {Emerging Trends in TinyML for Edge Devices},
-  journal      = {IEEE Internet of Things Journal},
-  year         = {2025}
-}
-
-@inproceedings{recipesnap2022,
-  author       = {Martin, Lauren and others},
-  title        = {RecipeSnap: Efficient Mobile Food Recognition},
-  booktitle    = {CVPR Workshops},
-  year         = {2022}
-}
-
-@book{tukey1977exploratory,
-  author       = {Tukey, John W.},
-  title        = {Exploratory Data Analysis},
-  publisher    = {Addison-Wesley},
-  year         = {1977}
-}
-
-@inproceedings{sandler2018mobilenetv2,
-  author       = {Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
-  title        = {MobileNetV2: Inverted Residuals and Linear Bottlenecks},
-  booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  pages        = {4510--4520},
-  year         = {2018},
-  url          = {https://arxiv.org/abs/1801.04381}
-}
-
-@inproceedings{krizhevsky2012imagenet,
-  author       = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
-  title        = {ImageNet Classification with Deep Convolutional Neural Networks},
-  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
-  pages        = {1097--1105},
-  year         = {2012},
-  url          = {https://papers.nips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf}
-}
-
-@inproceedings{tan2019efficientnet,
-  author       = {Tan, Mingxing and Le, Quoc V.},
-  title        = {EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks},
-  booktitle    = {International Conference on Machine Learning (ICML)},
-  pages        = {6105--6114},
-  year         = {2019},
-  organization = {PMLR}
-}
-
-@inproceedings{zoph2018nasnet,
-  author       = {Zoph, Barret and Vasudevan, Vijay and Shlens, Jonathon and Le, Quoc V.},
-  title        = {Learning Transferable Architectures for Scalable Image Recognition},
-  booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  pages        = {8697--8710},
-  year         = {2018},
-  doi          = {10.1109/CVPR.2018.00907}
-}
-
-@book{warden2019tinyml,
-  title        = {TinyML: Machine Learning with TensorFlow Lite on Arduino and Ultra-Low-Power Microcontrollers},
-  author       = {Warden, Pete and Situnayake, Daniel},
-  publisher    = {O'Reilly Media},
-  year         = {2019}
-}
-
 @inproceedings{han2016deep,
-  author       = {Han, Song and Pool, Jeff and Tran, John and Dally, William},
-  title        = {Deep Compression: Compressing Deep Neural Networks with Pruning, Trained Quantization and Huffman Coding},
-  booktitle    = {Proceedings of the International Conference on Learning Representations (ICLR)},
-  year         = {2016},
-  url          = {https://arxiv.org/abs/1510.00149}
+  author        = {Han, Song and Pool, Jeff and Tran, John and Dally, William},
+  title         = {Deep Compression: Compressing Deep Neural Networks with Pruning, Trained Quantization and Huffman Coding},
+  booktitle     = {Proceedings of the International Conference on Learning Representations (ICLR)},
+  year          = {2016}
 }
-
-@inproceedings{jacob2018quantization,
-  author       = {Jacob, Benoit and Kligys, Skirmantas and Chen, Bo and Zhu, Menglong and Tang, Matthew and Howard, Andrew G. and Adam, Hartwig and Kalenichenko, Dmitry},
-  title        = {Quantization and Training of Neural Networks for Efficient Integer-Arithmetic-Only Inference},
-  booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  pages        = {2704--2713},
-  year         = {2018},
-  url          = {https://arxiv.org/abs/1712.05877}
-}
-
 @article{howard2017mobilenets,
-  title        = {MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
-  author       = {Howard, Andrew G. and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
-  journal      = {arXiv preprint arXiv:1704.04861},
-  year         = {2017},
-  url          = {https://arxiv.org/abs/1704.04861}
+  title         = {MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
+  author        = {Howard, Andrew G. and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
+  journal       = {arXiv preprint arXiv:1704.04861},
+  year          = {2017}
 }
-
-@book{chollet2018deep,
-  title        = {Deep Learning with Python},
-  author       = {Chollet, François},
-  year         = {2018},
-  publisher    = {Manning Publications}
+@article{zoph2018,
+  author        = {Zoph, B. et al.},
+  title         = {Learning transferable architectures for scalable image recognition},
+  journal       = {CVPR 2018},
+  year          = {2018}
 }
-
-@inproceedings{kendall2017uncertainties,
-  author       = {Kendall, Alex and Gal, Yarin},
-  title        = {What Uncertainties Do We Need in Bayesian Deep Learning for Computer Vision?},
-  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
-  pages        = {5574--5584},
-  year         = {2017},
-  url          = {https://arxiv.org/abs/1703.04977}
+@inproceedings{jacob2018quantization,
+  author        = {Jacob, Benoit and Kligys, Skirmantas and Chen, Bo and Zhu, Menglong and Tang, Matthew and Howard, Andrew G. and Adam, Hartwig and Kalenichenko, Dmitry},
+  title         = {Quantization and Training of Neural Networks for Efficient Integer-Arithmetic-Only Inference},
+  booktitle     = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  pages         = {2704--2713},
+  year          = {2018}
 }
-
-@misc{loshchilov2017sgdr,
-  author       = {Loshchilov, Ilya and Hutter, Frank},
-  title        = {SGDR: Stochastic Gradient Descent with Warm Restarts},
-  year         = {2017},
-  howpublished = {arXiv:1608.03983},
-  url          = {https://arxiv.org/abs/1608.03983}
+@article{patel2019,
+  author        = {Patel, J. et al.},
+  title         = {Grain classification using convolutional neural networks},
+  journal       = {Computers and Electronics in Agriculture},
+  year          = {2019},
+  volume        = {162},
+  pages         = {572--580}
 }
-
-@inproceedings{folk2011hdf5,
-  title        = {An overview of the HDF5 technology suite and its applications},
-  author       = {Folk, Mike and Heber, Gerd and Koziol, Quincey and Pourmal, Elena and Robinson, Dana},
-  booktitle    = {Proceedings of the AD '11 Conference},
-  year         = {2011},
-  url          = {https://api.semanticscholar.org/CorpusID:15529673}
+@article{kaur2020,
+  author        = {Kaur, P. et al.},
+  title         = {Fruit maturity estimation using deep learning},
+  journal       = {Journal of Food Engineering},
+  year          = {2020},
+  volume        = {270},
+  pages         = {109762}
 }
-
+@article{gonzalez2021,
+  author        = {Gonz\'{a}lez-Barr\'{o}n, U. and Butler, F.},
+  title         = {Food defect detection using computer vision},
+  journal       = {Food Control},
+  year          = {2021},
+  volume        = {127},
+  pages         = {108128}
+}
+@article{yu2019,
+  author        = {Yu, J. et al.},
+  title         = {Texture and hardness prediction of food using visual features},
+  journal       = {Journal of Food Science},
+  year          = {2019},
+  volume        = {84},
+  pages         = {2150--2160}
+}
+@article{moeketsi2025,
+  author        = {Moeketsi, M. et al.},
+  title         = {TinyML Applications in Micronutrient Sensing},
+  journal       = {Sensors},
+  year          = {2025}
+}
+@article{capogrosso2023,
+  author        = {Capogrosso, F. et al.},
+  title         = {Machine Learning-oriented Survey on Tiny Machine Learning},
+  journal       = {arXiv preprint arXiv:2309.11932},
+  year          = {2023}
+}
+@article{heydari2025sensors,
+  author        = {Heydari, M. and Mahmoud, M.},
+  title         = {Tiny Machine Learning and On-Device Inference: A Survey},
+  journal       = {MDPI Sensors},
+  year          = {2025}
+}
+@article{sensors2025_tinydl,
+  author        = {Sensors, Anonymous},
+  title         = {From TinyML to TinyDL: Optimizing deep learning on microcontrollers},
+  journal       = {arXiv preprint arXiv:2506.18927},
+  year          = {2025}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%% Fin revue
+@article{lin2018,
+  title         = {Towards AI-Complete Question Answering: A Set of Prerequisite Toy Tasks},
+  author        = {Lin, Zhou and Antol, S. and Agrawal, M. and Lu, J. and Mitchell, C. and Batra, D. and Zitnick, C. L.},
+  journal       = {arXiv preprint arXiv:1802.07487},
+  year          = {2018}
+}
+@article{wu2020,
+  title         = {A comprehensive survey on transfer learning},
+  author        = {Wu, Zheng and Pan, Sinno Jialin and Chen, Fei and Long, Guodong and Zhang, Chengqi and Yu, Philip S.},
+  journal       = {Proceedings of the IEEE},
+  volume        = {109},
+  number        = {1},
+  pages         = {43--76},
+  year          = {2020}
+}
+@misc{tf_lite_micro_2020,
+  title         = {TensorFlow Lite Micro},
+  author        = {{TensorFlow Authors}},
+  year          = {2020},
+  note          = {Library for running machine learning models on microcontrollers}
+}
+@article{tinyml2024,
+  author        = {Smith, John and Doe, Alice},
+  title         = {TinyML for Industrial Applications},
+  journal       = {Proceedings of TinyML Summit},
+  year          = {2024}
+}
+@article{emergingtinyml2025,
+  author        = {Lee, Kevin and others},
+  title         = {Emerging Trends in TinyML for Edge Devices},
+  journal       = {IEEE Internet of Things Journal},
+  year          = {2025}
+}
+@inproceedings{recipesnap2022,
+  author        = {Martin, Lauren and others},
+  title         = {RecipeSnap: Efficient Mobile Food Recognition},
+  booktitle     = {CVPR Workshops},
+  year          = {2022}
+}
+@book{tukey1977,
+  author        = {Tukey, John W.},
+  title         = {Exploratory Data Analysis},
+  publisher     = {Addison-Wesley},
+  year          = {1977}
+}
+@inproceedings{fbnet2019,
+  author        = {Wu, Bichen and Iandola, Forrest N. and Jin, Peter and Gogulis, Joseph and Han, Song and Keutzer, Kurt},
+  title         = {FBNet: Hardware-Aware Efficient ConvNet Design via Differentiable Neural Architecture Search},
+  booktitle     = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year          = {2019},
+  pages         = {1074--1083}
+}
+@misc{tensorflowlitequant2023,
+  author        = {TensorFlow Lite Team},
+  title         = {TensorFlow Lite Quantization Guide},
+  year          = {2023},
+  note          = {Guide on quantization for efficient ML inference}
+}
+@inproceedings{hinton2015distillation,
+  author        = {Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
+  title         = {Distilling the Knowledge in a Neural Network},
+  booktitle     = {NIPS Deep Learning and Representation Learning Workshop},
+  year          = {2015}
+}
+@inproceedings{tan2019mnasnet,
+  author        = {Tan, Mingxing and Le, Quoc V.},
+  title         = {MnasNet: Platform-Aware Neural Architecture Search for Mobile},
+  booktitle     = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year          = {2019},
+  pages         = {2815--2823}
+}
+@inproceedings{sandler2018mobilenetv2,
+  author        = {Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
+  title         = {MobileNetV2: Inverted Residuals and Linear Bottlenecks},
+  booktitle     = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  pages         = {4510--4520},
+  year          = {2018}
+}
+@inproceedings{krizhevsky2012,
+  author        = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
+  title         = {ImageNet Classification with Deep Convolutional Neural Networks},
+  booktitle     = {Advances in Neural Information Processing Systems (NeurIPS)},
+  pages         = {1097--1105},
+  year          = {2012}
+}
+@book{warden2019,
+  author        = {Warden, Pete and Situnayake, Daniel},
+  title         = {TinyML: Machine Learning with TensorFlow Lite on Arduino and Ultra-Low-Power Microcontrollers},
+  publisher     = {O'Reilly Media},
+  year          = {2019}
+}
+@article{banbury2021micronets,
+  author        = {Banbury, Colby R. and Janapa Reddi, Vijay and Yang, Yong and Yang, Tengfei},
+  title         = {Micronets: Neural network architectures for deploying TinyML applications},
+  journal       = {Proceedings of Machine Learning and Systems},
+  volume        = {3},
+  pages         = {517--532},
+  year          = {2021}
+}
+@misc{openbenchmarks2024,
+  author        = {Various},
+  title         = {Open Model Benchmarks for Mobile Inference},
+  year          = {2024},
+  note          = {Source: Paperswithcode}
+}
+@article{david2020,
+  author        = {David, Richard and others},
+  title         = {TensorFlow Lite Micro: Embedded Machine Learning},
+  journal       = {arXiv preprint arXiv:2010.08678},
+  year          = {2020}
+}
+@inproceedings{mlperftiny2021,
+  author        = {Banbury, Colby and Janapa Reddi, Vijay and Torelli, Peter and others},
+  title         = {MLPerf Tiny Benchmark},
+  booktitle     = {NeurIPS Datasets and Benchmarks Track},
+  year          = {2021},
+  note          = {Mesure joint accuracy, latence et consommation}
+}
+@book{chollet2018,
+  author        = {Chollet, Fran\c{c}ois},
+  title         = {Deep Learning with Python},
+  publisher     = {Manning Publications},
+  year          = {2018}
+}
+@inproceedings{kendall2017,
+  author        = {Kendall, Alex and Gal, Yarin},
+  title         = {What Uncertainties Do We Need in Bayesian Deep Learning for Computer Vision?},
+  booktitle     = {Advances in Neural Information Processing Systems (NeurIPS)},
+  pages         = {5574--5584},
+  year          = {2017}
+}
+@misc{loshchilov2017,
+  author        = {Loshchilov, Ilya and Hutter, Frank},
+  title         = {SGDR: Stochastic Gradient Descent with Warm Restarts},
+  year          = {2017},
+  howpublished  = {arXiv:1608.03983}
+}
+@inproceedings{folk2011,
+  title         = {An overview of the HDF5 technology suite and its applications},
+  author        = {Folk, Mike and Heber, Gerd and Koziol, Quincey and Pourmal, Elena and Robinson, Dana},
+  booktitle     = {Proceedings of the AD '11 Conference},
+  year          = {2011}
+}
 @article{kingma2014adam,
-  title        = {Adam: A Method for Stochastic Optimization},
-  author       = {Kingma, Diederik P. and Ba, Jimmy},
-  journal      = {arXiv preprint arXiv:1412.6980},
-  year         = {2014},
-  url          = {https://arxiv.org/abs/1412.6980}
+  title         = {Adam: A Method for Stochastic Optimization},
+  author        = {Kingma, Diederik P. and Ba, Jimmy},
+  journal       = {arXiv preprint arXiv:1412.6980},
+  year          = {2014}
 }
-
 @article{pan2010transfer,
-  author       = {Pan, Sinno Jialin and Yang, Qiang},
-  title        = {A Survey on Transfer Learning},
-  journal      = {IEEE Transactions on Knowledge and Data Engineering},
-  volume       = {22},
-  number       = {10},
-  pages        = {1345--1359},
-  year         = {2010},
-  doi          = {10.1109/TKDE.2009.191},
-  url          = {https://www.cse.ust.hk/~qyang/Docs/2009/tkde_transfer_learning.pdf}
+  author        = {Pan, Sinno Jialin and Yang, Qiang},
+  title         = {A Survey on Transfer Learning},
+  journal       = {IEEE Transactions on Knowledge and Data Engineering},
+  volume        = {22},
+  number        = {10},
+  pages         = {1345--1359},
+  year          = {2010}
 }
-
-@article{pedregosa2011sklearn,
-  title        = {Scikit-learn: Machine Learning in Python},
-  author       = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Édouard},
-  journal      = {Journal of Machine Learning Research},
-  volume       = {12},
-  pages        = {2825--2830},
-  year         = {2011}
+@article{pedregosa2011,
+  title         = {Scikit-learn: Machine Learning in Python},
+  author        = {Pedregosa, Fabian and Varoquaux, Ga\"{e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, \'{E}douard},
+  journal       = {Journal of Machine Learning Research},
+  volume        = {12},
+  pages         = {2825--2830},
+  year          = {2011}
 }
-
-@article{shorten2019augmentation,
-  title        = {A survey on image data augmentation for deep learning},
-  author       = {Shorten, Connor and Khoshgoftaar, Taghi M.},
-  journal      = {Journal of Big Data},
-  volume       = {6},
-  number       = {1},
-  pages        = {60},
-  year         = {2019},
-  publisher    = {Springer},
-  doi          = {10.1186/s40537-019-0197-0}
+@article{shorten2019,
+  title         = {A survey on image data augmentation for deep learning},
+  author        = {Shorten, Connor and Khoshgoftaar, Taghi M.},
+  journal       = {Journal of Big Data},
+  volume        = {6},
+  number        = {1},
+  pages         = {60},
+  year          = {2019},
+  publisher     = {Springer}
 }
-
 @inproceedings{lin2014network,
-  title        = {Network In Network},
-  author       = {Lin, Min and Chen, Qiang and Yan, Shuicheng},
-  booktitle    = {International Conference on Learning Representations (ICLR)},
-  year         = {2014},
-  url          = {https://arxiv.org/abs/1312.4400}
+  title         = {Network In Network},
+  author        = {Lin, Min and Chen, Qiang and Yan, Shuicheng},
+  booktitle     = {International Conference on Learning Representations (ICLR)},
+  year          = {2014}
 }
-
 @article{srivastava2014dropout,
-  title        = {Dropout: A simple way to prevent neural networks from overfitting},
-  author       = {Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
-  journal      = {Journal of Machine Learning Research},
-  volume       = {15},
-  number       = {56},
-  pages        = {1929--1958},
-  year         = {2014},
-  url          = {http://jmlr.org/papers/v15/srivastava14a.html}
+  title         = {Dropout: A simple way to prevent neural networks from overfitting},
+  author        = {Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal       = {Journal of Machine Learning Research},
+  volume        = {15},
+  number        = {56},
+  pages         = {1929--1958},
+  year          = {2014}
 }
-
-@book{warden2020tinyml,
-  author       = {Warden, Pete and Situnayake, Daniel},
-  title        = {TinyML: Machine Learning with TensorFlow Lite on Arduino and Ultra-Low-Power Microcontrollers},
-  year         = {2020},
-  publisher    = {O'Reilly Media},
-  isbn         = {1492052043}
+@book{chollet2018deeplearning,
+  title         = {Deep Learning with Python},
+  author        = {Chollet, Fran\c{c}ois},
+  year          = {2018},
+  publisher     = {Manning Publications}
 }
-
-@article{banbury2021mlperf,
-  author       = {Banbury, Colby and others},
-  title        = {MLPerf Tiny Benchmark},
-  journal      = {arXiv preprint arXiv:2106.07597},
-  year         = {2021},
-  url          = {https://arxiv.org/abs/2106.07597}
+@inproceedings{kendall2017uncertainties,
+  author        = {Kendall, Alex and Gal, Yarin},
+  title         = {What Uncertainties Do We Need in Bayesian Deep Learning for Computer Vision?},
+  booktitle     = {Advances in Neural Information Processing Systems (NeurIPS)},
+  pages         = {5574--5584},
+  year          = {2017}
 }
-
-@article{gao2019cortical,
-  title        = {Cortical column and whole-brain imaging with molecular contrast and nanoscale resolution},
-  author       = {Gao, R. and Asano, S. M. and Upadhyayula, S. and Pisarev, I. and Milkie, D. E. and Liu, T. L. and Singh, V. and Graves, A. and Huynh, G. H. and Zhao, Y. and others},
-  journal      = {Science},
-  volume       = {363},
-  number       = {6424},
-  pages        = {eaau8302},
-  year         = {2019},
-  publisher    = {American Association for the Advancement of Science}
+@misc{loshchilov2017sgdr,
+  author        = {Loshchilov, Ilya and Hutter, Frank},
+  title         = {SGDR: Stochastic Gradient Descent with Warm Restarts},
+  year          = {2017},
+  howpublished  = {arXiv:1608.03983}
 }
-
-@article{mendoza2018,
-  title={Prediction of cooking time for soaked and unsoaked dry beans (Phaseolus vulgaris L.) using hyperspectral imaging technology},
-  author={Mendoza, F. A. and Wiesinger, J. A. and Lu, R. and Nchimbi-Msolla, S.},
-  journal={The Plant Phenome Journal},
-  volume={1},
-  number={1},
-  year={2018},
-  publisher={American Society of Agronomy},
-  doi={10.2135/tppj2018.05.0008}
+@inproceedings{folk2011hdf5,
+  title         = {An overview of the HDF5 technology suite and its applications},
+  author        = {Folk, Mike and Heber, Gerd and Koziol, Quincey and Pourmal, Elena and Robinson, Dana},
+  booktitle     = {Proceedings of the AD '11 Conference},
+  year          = {2011}
 }
-
+@article{kingma2014adamoptimizer,
+  title         = {Adam: A Method for Stochastic Optimization},
+  author        = {Kingma, Diederik P. and Ba, Jimmy},
+  journal       = {arXiv preprint arXiv:1412.6980},
+  year          = {2014}
+}
+@article{pan2010surveytransfer,
+  author        = {Pan, Sinno Jialin and Yang, Qiang},
+  title         = {A Survey on Transfer Learning},
+  journal       = {IEEE Transactions on Knowledge and Data Engineering},
+  volume        = {22},
+  number        = {10},
+  pages         = {1345--1359},
+  year          = {2010}
+}
+@article{pedregosa2011sklearn,
+  title         = {Scikit-learn: Machine Learning in Python},
+  author        = {Pedregosa, Fabian and Varoquaux, Ga\"{e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, \'{E}douard},
+  journal       = {Journal of Machine Learning Research},
+  volume        = {12},
+  pages         = {2825--2830},
+  year          = {2011}
+}
+@article{shorten2019augmentation,
+  title         = {A survey on image data augmentation for deep learning},
+  author        = {Shorten, Connor and Khoshgoftaar, Taghi M.},
+  journal       = {Journal of Big Data},
+  volume        = {6},
+  number        = {1},
+  pages         = {60},
+  year          = {2019}
+}
 @phdthesis{tastan2023,
-  author = {Aylin Tastan},
-  title = {Contributions to Robust Graph Clustering: Spectral Analysis and Algorithms},
-  school = {Technische Universität Darmstadt},
-  year = {2023},
-  note = {DOI: 10.26083/tuprints}
+  author        = {Aylin Tastan},
+  title         = {Contributions to Robust Graph Clustering: Spectral Analysis and Algorithms},
+  school        = {Technische Universit\"{a}t Darmstadt},
+  year          = {2023},
+  note          = {DOI: 10.26083/tuprints}
 }
