--- a/main_thesis.tex
+++ b/main_thesis.tex
@@ -2,10 +2,8 @@
 \addbibresource{library.bib}
 
 \begin{document}
-
 \titleThesis{TinyML for Bean Cooking Time Prediction}
 
-% Note that underscore needs to be escaped in LaTeX:
 \author{MBAIGOLMEM DANG-DANG THIERY \thanks{dev.thiery.dangdang@gmail.com}}
 
 % Matriculation Number
@@ -17,12 +15,12 @@
 % Address, for declarations at the end of the thesis.
 \city{Université de Ngaoundéré}
 
-\professor{Prof. Dr. Ing. FENDJI Jean Louis}
+\professor{Prof. Dr. Ing. FENDJI JEAN LOUIS KEDIENG EBONGUE}
 
-\supervisor{Supervisor, Pr Dr BOUKAR}
+% \supervisor{Supervisor, Pr Dr BOUKAR}
 
 % Submission Date
-\date{08.09.2025}
+% \date{08.09.2025}
 
 \maketitle
 \tableofcontents
@@ -43,20 +41,16 @@
 \begin{backmatter}
 
 	\begingroup
-
-	% \setlength{\emergencystretch}{.5em}
-
+	\setlength{\emergencystretch}{.5em}
 
 	\printbibliography[
 		heading=bibintoc,
 		title={Bibliographie}
 	]
-
 	\endgroup
+	\frenchDeclaration
+
 \end{backmatter}
-
-\frenchDeclaration
-
-% ============================================================
+==============================================
 
 \end{document}
